Crash when adding texture node in compositor #47565

Closed
opened 2016-02-25 19:16:21 +01:00 by Jason van Gumster · 6 comments

System Information
Arch Linux, Quadro K5000M

Blender Version
Broken: Current master (hash: ba98b68)

Short description of error
Adding a texture node in the node compositor causes a hard crash. The following is a GDB backtrace:

Program received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0x7fffc92cd700 (LWP 29864)]
0x0000000002aec8b2 in TextureBaseOperation::initExecution (this=0x7fffc4003590)
    at /home/jason_vangumster/src/blender/blender/source/blender/compositor/oper
ations/COM_TextureOperation.cpp:60
60		if (this->m_texture->nodetree && this->m_texture->use_nodes) {
(gdb) bt
#0  0x0000000002aec8b2 in TextureBaseOperation::initExecution (
    this=0x7fffc4003590)
    at /home/jason_vangumster/src/blender/blender/source/blender/compositor/operations/COM_TextureOperation.cpp:60
#1  0x0000000002a9b0a3 in ExecutionSystem::execute (this=0x7fffc4004990)
    at /home/jason_vangumster/src/blender/blender/source/blender/compositor/intern/COM_ExecutionSystem.cpp:168
#2  0x0000000002a9a735 in COM_execute (rd=0x74a3fc0, scene=0x74a3e88,
    editingtree=0x8f0dc28, rendering=0, viewSettings=0x74a52a8,
    displaySettings=0x74a5348, viewName=0x50f1218 "")
    at /home/jason_vangumster/src/blender/blender/source/blender/compositor/intern/COM_compositor.cpp:96
#3  0x0000000002def18c in ntreeCompositExecTree (scene=0x74a3e88,
    ntree=0x8f0dc28, rd=0x74a3fc0, rendering=0, do_preview=1,
    view_settings=0x74a52a8, display_settings=0x74a5348,
    view_name=0x50f1218 "")
    at /home/jason_vangumster/src/blender/blender/source/blender/nodes/composite/node_composite_tree.c:233
#4  0x000000000200f4fc in compo_startjob (cjv=0x8c0bf08, stop=0x903f6fc,
    do_update=0x903f6fa, progress=0x903f700)
    at /home/jason_vangumster/src/blender/blender/source/blender/editors/space_node/node_edit.c:243
#5  0x0000000001f7433a in do_job_thread (job_v=0x903f688)
    at /home/jason_vangumster/src/blender/blender/source/blender/windowmanager/intern/wm_jobs.c:337
#6  0x00000000030bc220 in tslot_thread_start (tslot_p=0x8d91928)
    at /home/jason_vangumster/src/blender/blender/source/blender/blenlib/intern/threads.c:254
- 7  0x00007fffed5714a4 in start_thread () from /usr/lib/libpthread.so.0
- 8  0x00007fffed0aadcd in clone () from /usr/lib/libc.so.6

Exact steps for others to reproduce the error

  1. Launch Blender
  2. Switch to Compositing screen layout
  3. Enable Use Nodes in Compositor
  4. Add Texture node (Shift+A > Input > Texture
**System Information** Arch Linux, Quadro K5000M **Blender Version** Broken: Current master (hash: ba98b68) **Short description of error** Adding a texture node in the node compositor causes a hard crash. The following is a GDB backtrace: ``` Program received signal SIGSEGV, Segmentation fault. [Switching to Thread 0x7fffc92cd700 (LWP 29864)] 0x0000000002aec8b2 in TextureBaseOperation::initExecution (this=0x7fffc4003590) at /home/jason_vangumster/src/blender/blender/source/blender/compositor/oper ations/COM_TextureOperation.cpp:60 60 if (this->m_texture->nodetree && this->m_texture->use_nodes) { (gdb) bt #0 0x0000000002aec8b2 in TextureBaseOperation::initExecution ( this=0x7fffc4003590) at /home/jason_vangumster/src/blender/blender/source/blender/compositor/operations/COM_TextureOperation.cpp:60 #1 0x0000000002a9b0a3 in ExecutionSystem::execute (this=0x7fffc4004990) at /home/jason_vangumster/src/blender/blender/source/blender/compositor/intern/COM_ExecutionSystem.cpp:168 #2 0x0000000002a9a735 in COM_execute (rd=0x74a3fc0, scene=0x74a3e88, editingtree=0x8f0dc28, rendering=0, viewSettings=0x74a52a8, displaySettings=0x74a5348, viewName=0x50f1218 "") at /home/jason_vangumster/src/blender/blender/source/blender/compositor/intern/COM_compositor.cpp:96 #3 0x0000000002def18c in ntreeCompositExecTree (scene=0x74a3e88, ntree=0x8f0dc28, rd=0x74a3fc0, rendering=0, do_preview=1, view_settings=0x74a52a8, display_settings=0x74a5348, view_name=0x50f1218 "") at /home/jason_vangumster/src/blender/blender/source/blender/nodes/composite/node_composite_tree.c:233 #4 0x000000000200f4fc in compo_startjob (cjv=0x8c0bf08, stop=0x903f6fc, do_update=0x903f6fa, progress=0x903f700) at /home/jason_vangumster/src/blender/blender/source/blender/editors/space_node/node_edit.c:243 #5 0x0000000001f7433a in do_job_thread (job_v=0x903f688) at /home/jason_vangumster/src/blender/blender/source/blender/windowmanager/intern/wm_jobs.c:337 #6 0x00000000030bc220 in tslot_thread_start (tslot_p=0x8d91928) at /home/jason_vangumster/src/blender/blender/source/blender/blenlib/intern/threads.c:254 - 7 0x00007fffed5714a4 in start_thread () from /usr/lib/libpthread.so.0 - 8 0x00007fffed0aadcd in clone () from /usr/lib/libc.so.6 ``` **Exact steps for others to reproduce the error** 1. Launch Blender 2. Switch to Compositing screen layout 3. Enable Use Nodes in Compositor 4. Add Texture node (Shift+A > Input > Texture
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @JasonvanGumster

Added subscriber: @JasonvanGumster

Added subscriber: @mont29

Added subscriber: @mont29
Sergey Sharybin was assigned by Bastien Montagne 2016-02-25 19:51:15 +01:00

Confirmed, nice crash indeed… :P

Confirmed, nice crash indeed… :P

This issue was referenced by b50e880e49

This issue was referenced by b50e880e49809118c5a2f8f7ece5cf4b22557a1b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47565
No description provided.