Fix T47565: Crash when adding texture node in compositor